"search_placeholder" = "type to search…";
"clear_tooltip" = "Clear unpinned items.\nSelect with ⇧ to clear all.";
"clear_all_tooltip" = "Clear all items.";
"about_tooltip" = "Read more about application.";
"quit_tooltip" = "Quit application.";
"clear" = "Clear";
"clear_all" = "Clear all";
"about" = "About";
"quit" = "Quit";
"preferences" = "Preferences…";
"preferences_advanced" = "Advanced";
"preferences_appearance" = "Appearance";
"preferences_ignore" = "Ignore";
...
